--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newtodo",
   "version": "1.0.0",
   "main": "webpack.config.js",
-  "private":"true",
+  "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch"
@@ -14,5 +14,8 @@
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
